working with routes

--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -1,3 +1,20 @@
 .header-wrp
     min-height: 100px
     background-color: orange
+
+.header-menu
+    text-decoration: none
+    color: rgb(72, 72, 79)
+    margin: 10px
+    transition: background-color 400ms
+    padding: 10px
+    transition: border-bottom 1400ms
+
+.header-menu:hover
+    background-color: yellow
+    transition: background-color 400ms 
+
+.header-menu--active
+    color: red
+    border-bottom: 1px solid rgb(72, 72, 79)
+    transition: border-bottom 1400ms
