--- a/src/sass/_portfolio.sass
+++ b/src/sass/_portfolio.sass
@@ -1,3 +1,10 @@
 .portfolio-wrp
     background-color: yellow
     min-height: 200px
+    display: flex
+    justify-content: center
+    flex-wrap: wrap
+
+.portfolio-item
+    img
+        width: 150px
