--- a/src/sass/_portfolio.sass
+++ b/src/sass/_portfolio.sass
@@ -1,10 +1,32 @@
-.portfolio-wrp
-    background-color: yellow
-    min-height: 200px
+.portfolio-page
     display: flex
-    justify-content: center
-    flex-wrap: wrap
+    width: 100%
 
-.portfolio-item
-    img
-        width: 150px
+    .portfolio-wrp
+        flex: 4
+        background-color: yellow
+        min-height: 200px
+        display: flex
+        justify-content: center
+        flex-wrap: wrap
+        max-width: 100%
+        min-height: 100%
+
+    .portfolio-item
+        img
+            width: 150px
+
+
+    
+    .side-nav 
+        flex: 1
+        background-color: grey
+        display: flex
+        flex-direction: column
+        justify-content: flex-start
+        min-width: 20%
+        min-width: 30%
+
+
+    .portfolio-wrp 
+        max-width: 80%
