--- a/src/App.scss
+++ b/src/App.scss
@@ -6,11 +6,17 @@
 
 
 .App {
+  position: relative;
   text-align: center;
   height: 100vh;
 }
 
+.header-wrapper{
+  height: 5vh;
+}
+
 .content {
   display: flex;
+  height: 95vh;
 }
 
