--- a/src/sass/_home.sass
+++ b/src/sass/_home.sass
@@ -2,6 +2,13 @@
     margin: 0 auto
 
 .home-wrapper
+    height: 100vh
+    top: 0
+    left: 0
+    position: absolute
     background-color: yellow
     min-height: 100px
     width: 100%
+    display: flex
+    flex-direction: column
+    justify-content: space-around
