--- a/src/sass/_portfolio.sass
+++ b/src/sass/_portfolio.sass
@@ -3,30 +3,35 @@
     width: 100%
 
     .portfolio-wrp
-        flex: 4
         background-color: yellow
-        min-height: 200px
+        overflow: hidden
+        flex: 4
         display: flex
         justify-content: center
-        flex-wrap: wrap
-        max-width: 100%
-        min-height: 100%
-
-    .portfolio-item
-        img
-            width: 150px
-
-
-    
+        flex-direction: column
+        
+        
     .side-nav 
         flex: 1
         background-color: grey
         display: flex
         flex-direction: column
         justify-content: flex-start
-        min-width: 20%
-        min-width: 30%
 
-
-    .portfolio-wrp 
-        max-width: 80%
+.portfolio-item-list
+    
+    min-height: 80%
+    display: flex
+    justify-content: center
+    flex-wrap: wrap
+    align-content: space-around
+    max-width: 100%
+    
+    .portfolio-item
+        height: 50%
+        background-color: #a1919182
+        flex-basis: 39%
+        // min-width: 39%
+        img
+            width: 150px
+            flex: 1
