bg-image on home page

--- a/src/sass/_about.sass
+++ b/src/sass/_about.sass
@@ -1,4 +1,8 @@
 .about-wrp
-    background-color: green
+    background-color: white
     min-height: 200px
     min-width: 100%
+    background-image: url(./img/tree.png)
+    background-repeat: no-repeat
+    background-position: 6% 105%
+    background-size: 40%
