--- a/src/sass/_home.sass
+++ b/src/sass/_home.sass
@@ -1,14 +1,41 @@
 .home
+    font-size: 1.3rem
+    color: #7c7c7c
+    padding: 5%
     margin: 0 auto
+    max-width: 70%
+    background-color: rgba(42, 40, 40, 0.94)
+    min-width: 30%
+    background: linear-gradient(to bottom, #fac1c4, #fcc9c5, rgba(252, 210, 201, 0.43), rgba(252, 219, 206, 0.43), rgba(252, 227, 213, 0.14))
+.next-btn-wrp
+    color: #c2bfbf
+    .next-button
+        border-radius: 30px
+        font-size: 3rem
+        text-decoration: none
+        visited: none
+        background-color: rgba(42, 40, 40, 0.94)
+        transition: background-color 600ms
+        &:hover
+            color: white
+            background-color: rgba(0, 0, 0, 1)
+            transition: background-color 300ms
+        
 
 .home-wrapper
+    font-family: 'Roboto', sans-serif
+    font-weight: 600
+    background-color: white
     height: 100vh
     top: 0
     left: 0
     position: absolute
-    background-color: yellow
+    background-image: url(./img/landscape-1.png)
     min-height: 100px
     width: 100%
     display: flex
     flex-direction: column
     justify-content: space-around
+    background-position: center
+    background-repeat: no-repeat
+    background-size: cover
