--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@
 
 
 .App {
+  background-color: green;
   position: relative;
   text-align: center;
   height: 100vh;
@@ -19,4 +20,20 @@
   display: flex;
   height: 95vh;
 }
+.content-sub-wrp{
+  width: 100%;
+  display: flex;
+}
+//animation
+
+.fade-enter {
+  opacity: 0;
+  z-index: 1;
+}
+
+.fade-enter.fade-enter-active {
+  opacity: 1;
+  transition: opacity 200ms ease-in;
+}
+
 
