--- a/src/sass/_portfolio.sass
+++ b/src/sass/_portfolio.sass
@@ -3,6 +3,7 @@
     width: 100%
 
     .portfolio-wrp
+        width: 100%
         background-color: yellow
         overflow: hidden
         flex: 4
@@ -12,6 +13,7 @@
         
         
     .side-nav 
+        width: 100%
         flex: 1
         background-color: grey
         display: flex
