added svg background

--- a/src/sass/_about.sass
+++ b/src/sass/_about.sass
@@ -2,7 +2,11 @@
     background-color: white
     min-height: 200px
     min-width: 100%
-    background-image: url(./img/tree.png)
+    background-image: url(./img/red-landscape.svg)
     background-repeat: no-repeat
-    background-position: 6% 105%
-    background-size: 40%
+    background-position: center
+    background-size: cover
+
+    display: flex
+    flex-direction: column
+    justify-content: center
