--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -1,6 +1,10 @@
 .header-wrp
+    width: 100%
+    position: relative
+    z-index: 2
     height: 5vh
-    background-color: orange
+    background: linear-gradient(to bottom, #fac1c4, #fcc9c5, rgba(252, 210, 201, 0.43), rgba(252, 219, 206, 0.43), rgba(252, 227, 213, 0.14))
+
 
 .header-menu
     text-decoration: none
