--- a/src/App.scss
+++ b/src/App.scss
@@ -10,15 +10,18 @@
   position: relative;
   text-align: center;
   height: 100vh;
+  overflow: hidden;
 }
 
-.header-wrapper{
-  height: 5vh;
-}
 
 .content {
+  height: 100vh;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
   display: flex;
-  height: 95vh;
+
 }
 .content-sub-wrp{
   width: 100%;
@@ -47,7 +50,7 @@
   will-change: transform opacity;
   transform: translateX(400px);
   opacity: 0;
-  transition: all 200ms ease-out;
+  transition: all 180ms ease-out;
 }
 
 
