--- a/src/sass/_home.sass
+++ b/src/sass/_home.sass
@@ -26,10 +26,7 @@
     font-family: 'Roboto', sans-serif
     font-weight: 600
     background-color: white
-    height: 100vh
-    top: 0
-    left: 0
-    position: absolute
+    z-index: 5
     background-image: url(./img/landscape-1.png)
     min-height: 100px
     width: 100%
