--- a/src/sass/_portfolio.sass
+++ b/src/sass/_portfolio.sass
@@ -1,10 +1,14 @@
 .portfolio-page
+    z-index: 1
     display: flex
     width: 100%
+    background-image: url(./img/lsp-lake-red-01.svg)
+    background-position: center
+    background-repeat: no-repeat
+    background-size: cover
 
     .portfolio-wrp
         width: 100%
-        background-color: yellow
         overflow: hidden
         flex: 4
         display: flex
@@ -15,7 +19,6 @@
     .side-nav 
         width: 100%
         flex: 1
-        background-color: grey
         display: flex
         flex-direction: column
         justify-content: flex-start
