done with route animations

--- a/src/sass/_home.sass
+++ b/src/sass/_home.sass
@@ -1,3 +1,22 @@
+.home-wrapper
+    font-family: 'Roboto', sans-serif
+    font-weight: 600
+    z-index: 5
+    position: absolute
+
+    min-height: 100%
+    min-width: 100%
+    width: 100%
+
+    display: flex
+    flex-direction: column
+    justify-content: space-around
+
+    background-color: white
+    background-image: url(./img/landscape-1.png)
+    background-position: center
+    background-repeat: no-repeat
+    background-size: cover
 .home
     font-size: 1.3rem
     color: #7c7c7c
@@ -7,6 +26,7 @@
     background-color: rgba(42, 40, 40, 0.94)
     min-width: 30%
     background: linear-gradient(to bottom, #fac1c4, #fcc9c5, rgba(252, 210, 201, 0.43), rgba(252, 219, 206, 0.43), rgba(252, 227, 213, 0.14))
+
 .next-btn-wrp
     color: #c2bfbf
     .next-button
@@ -21,18 +41,3 @@
             background-color: rgba(0, 0, 0, 1)
             transition: background-color 300ms
         
-
-.home-wrapper
-    font-family: 'Roboto', sans-serif
-    font-weight: 600
-    background-color: white
-    z-index: 5
-    background-image: url(./img/landscape-1.png)
-    min-height: 100px
-    width: 100%
-    display: flex
-    flex-direction: column
-    justify-content: space-around
-    background-position: center
-    background-repeat: no-repeat
-    background-size: cover
