--- a/src/sass/_portfolio.sass
+++ b/src/sass/_portfolio.sass
@@ -1,13 +1,16 @@
 .portfolio-page
+    position: absolute
     z-index: 1
     display: flex
-    width: 100%
+    min-height: 100%
+    min-width: 100%
     background-image: url(./img/lsp-lake-red-01.svg)
     background-position: center
     background-repeat: no-repeat
     background-size: cover
 
     .portfolio-wrp
+        min-width: 200px
         width: 100%
         overflow: hidden
         flex: 4
