--- a/src/App.scss
+++ b/src/App.scss
@@ -13,7 +13,6 @@
   overflow: hidden;
 }
 
-
 .content {
   height: 100vh;
   width: 100%;
@@ -21,36 +20,30 @@
   top: 0;
   left: 0;
   display: flex;
-
 }
-.content-sub-wrp{
+.tr-group{
   width: 100%;
-  display: flex;
+  
 }
 //animation
 
 .fade-enter {
-  transform: translateX(-400px);
-  z-index: 1;
+  transform: translateX(-150%);
+  
 }
 
 .fade-enter.fade-enter-active {
-  // opacity: 1;
-  transform: translateX(0px);
-  transition: transform 360ms ease-in;
+  transform: translateX(0);
+  transition: transform 900ms ease-out;
   will-change: transform;
 }
-
 .fade-exit{
-  z-index: 1;
   transform: translateX(0);
 }
-
-.fade-exit.fade-exit-active {
-  will-change: transform opacity;
-  transform: translateX(400px);
-  opacity: 0;
-  transition: all 180ms ease-out;
+.fade-exit.fade-exit-active{
+  transform: translateX(150%);
+  transition: transform 860ms ease-out;
+  will-change: transform;
 }
 
 
