--- a/src/sass/_about.sass
+++ b/src/sass/_about.sass
@@ -1,7 +1,9 @@
 .about-wrp
-    background-color: white
-    min-height: 200px
+    position: absolute
+    min-height: 100%
     min-width: 100%
+
+    background-color: white
     background-image: url(./img/red-landscape.svg)
     background-repeat: no-repeat
     background-position: center
