--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -23,4 +23,8 @@
     border-bottom: 1px solid rgb(72, 72, 79)
     transition: border-bottom 1400ms
 
-
+.test-enter
+    transform: translateY(-100%)
+.test-enter.test-enter-active
+    transform: translateY(0%)
+    transition: transform 500ms ease
