--- a/src/sass/_home.sass
+++ b/src/sass/_home.sass
@@ -39,4 +39,6 @@
             color: white
             background-color: rgba(0, 0, 0, 1)
             transition: background-color 300ms
-        
+       
+//home-page media-queries
+@import './media/_home-media'
