--- a/src/sass/_about.sass
+++ b/src/sass/_about.sass
@@ -1,13 +1,24 @@
 .about-wrp
     position: absolute
-    min-height: 100%
+    height: 100%
     min-width: 100%
 
     background-color: white
-    background-image: url(./img/red-landscape.svg)
+    background-image: url(./img/mount-house.svg)
     background-repeat: no-repeat
     background-position: center
     background-size: cover
+
+    display: flex
+    flex-direction: column
+    justify-content: center
+
+.about
+    color: #f5e8e8
+    margin: 0 auto
+    max-width: 80%
+    min-height: 60%
+    background-color: hsla(0, 11%, 53%, 0.69)
 
     display: flex
     flex-direction: column
