--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -1,21 +1,31 @@
+@import './media/header-media.sass'
+    
 .header-wrp
     width: 100%
+    height: 5vh
+
     position: relative
     z-index: 2
-    height: 5vh
-    background: linear-gradient(to bottom, #fac1c4, #fcc9c5, rgba(252, 210, 201, 0.43), rgba(252, 219, 206, 0.43), rgba(252, 227, 213, 0.14))
+    
+    background: linear-gradient(to bottom,
+    rgb(226, 172, 174), rgba(246, 192, 188, 0.74),
+    rgba(255, 189, 175, 0.38), rgba(252, 219, 206, 0.43),
+    rgba(253, 220, 201, 0.11))
 
+    // background-image: linear-gradient(to top, #fac2c5, #ca9aaa, #98768e, #675570, #373650)
 
 .header-menu
+    font-size: 20px
+    font-weight: 600
+    font-family: 'Roboto'
     text-decoration: none
-    color: rgb(72, 72, 79)
-    margin: 10px
-    transition: background-color 400ms
-    padding: 10px
-    transition: border-bottom 1400ms
+    color: white
 
+    margin: 10px
+    padding: 10px
+    
 .header-menu:hover
-    background-color: yellow
+    background-color: black
     transition: background-color 400ms 
 
 .header-menu--active
@@ -27,5 +37,5 @@
     transform: translateY(-100%)
 .test-enter.test-enter-active
     transform: translateY(0%)
-    transition: transform 500ms ease
+    transition: transform 300ms ease
     will-change: transform
