--- a/src/sass/_portfolio.sass
+++ b/src/sass/_portfolio.sass
@@ -4,7 +4,8 @@
     display: flex
     min-height: 100%
     min-width: 100%
-    background-image: url(./img/lsp-lake-red-01.svg)
+    // background-image: url(./img/forest.svg)
+    background-color: grey
     background-position: center
     background-repeat: no-repeat
     background-size: cover
