--- a/src/sass/_about.sass
+++ b/src/sass/_about.sass
@@ -16,6 +16,7 @@
 .about
     color: #f5e8e8
     margin: 0 auto
+    min-width: 50%
     max-width: 80%
     min-height: 60%
     background-color: hsla(0, 11%, 53%, 0.69)
