--- a/src/App.scss
+++ b/src/App.scss
@@ -7,18 +7,18 @@
 
 .App {
   background: linear-gradient(to bottom, #fac1c4, #fcc9c5, rgba(252, 210, 201, 0.43), rgba(252, 219, 206, 0.43), rgba(252, 227, 213, 0.14));
-  position: relative;
   text-align: center;
-  height: 100vh;
+  height: 100%;
   overflow: hidden;
 }
 
 .content {
-  height: 100vh;
   width: 100%;
+  height: 100%;
+
+  overflow: hidden;
   position: absolute;
-  top: 0;
-  left: 0;
+  right: 0;
   display: flex;
 }
 .tr-group{
