--- a/src/sass/_about.sass
+++ b/src/sass/_about.sass
@@ -30,7 +30,8 @@
 .about-wrp
     position: absolute
     height: 100%
-    min-width: 100%
+    width: 85%
+    right: 0
 
     background-color: white
     background-image: url(./img/mount-house.svg)
