--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -1,16 +1,19 @@
 @import './media/header-media.sass'
     
 .header-wrp
-    width: 100%
-    height: 5vh
+    min-width: 10%
+    width: 15%
+    height: 100vh
+    display: flex
+    flex-direction: column
 
-    position: relative
+    position: fixed
+    top: 0
+    left: 0
+
     z-index: 2
     
-    background: linear-gradient(to bottom,
-    rgb(226, 172, 174), rgba(246, 192, 188, 0.74),
-    rgba(255, 189, 175, 0.38), rgba(252, 219, 206, 0.43),
-    rgba(253, 220, 201, 0.11))
+    background: white
 
     // background-image: linear-gradient(to top, #fac2c5, #ca9aaa, #98768e, #675570, #373650)
 
@@ -19,7 +22,7 @@
     font-weight: 600
     font-family: 'Roboto'
     text-decoration: none
-    color: white
+    color: gray
 
     margin: 10px
     padding: 10px
