--- a/src/sass/_portfolio.sass
+++ b/src/sass/_portfolio.sass
@@ -1,10 +1,12 @@
 .portfolio-page
+    width: 85%
+    right: 0
     position: absolute
     z-index: 1
     display: flex
     min-height: 100%
-    min-width: 100%
-    // background-image: url(./img/forest.svg)
+    
+    
     background-color: grey
     background-position: center
     background-repeat: no-repeat
