--- a/src/App.scss
+++ b/src/App.scss
@@ -6,13 +6,15 @@
 
 
 .App {
-  background: linear-gradient(to bottom, #fac1c4, #fcc9c5, rgba(252, 210, 201, 0.43), rgba(252, 219, 206, 0.43), rgba(252, 227, 213, 0.14));
+  // background: linear-gradient(to bottom, #fac1c4, #fcc9c5, rgba(252, 210, 201, 0.43), rgba(252, 219, 206, 0.43), rgba(252, 227, 213, 0.14));
   text-align: center;
   height: 100%;
   overflow: hidden;
 }
 
 .content {
+  background-image: url(./img/grey_wash_wall.png);
+  background-repeat: repeat; 
   width: 100%;
   height: 100%;
 
