--- a/src/sass/_about.sass
+++ b/src/sass/_about.sass
@@ -34,10 +34,10 @@
     right: 0
 
     background-color: white
-    background-image: url(./img/mount-house.svg)
-    background-repeat: no-repeat
-    background-position: center
-    background-size: cover
+    background-image: url(./img/swirl_pattern.png)
+    background-repeat: repeat
+    // background-position: center
+    // background-size: cover
 
     display: flex
     flex-direction: column
