--- a/src/sass/_portfolio.sass
+++ b/src/sass/_portfolio.sass
@@ -6,11 +6,9 @@
     display: flex
     min-height: 100%
     
-    
-    background-color: grey
-    background-position: center
-    background-repeat: no-repeat
-    background-size: cover
+    background-image: url(./img/brickwall.png)
+    background-repeat: repeat
+
 
     .portfolio-wrp
         min-width: 200px
