--- a/src/sass/_portfolio.sass
+++ b/src/sass/_portfolio.sass
@@ -6,7 +6,7 @@
     display: flex
     min-height: 100%
     
-    background-image: url(./img/brickwall.png)
+    background-image: url(./img/brickwall_@2X.png)
     background-repeat: repeat
 
 
