--- a/src/sass/_about.sass
+++ b/src/sass/_about.sass
@@ -36,17 +36,32 @@
     background-color: white
     background-image: url(./img/swirl_pattern.png)
     background-repeat: repeat
-    // background-position: center
-    // background-size: cover
+    
 
     display: flex
     flex-direction: column
-    justify-content: center
+    // justify-content: center
+
+.about-header
+    // font-weight: bold
+    font-size: 2rem
+    font-family: 'Roboto'
+    color: white
+
+    display: flex
+    align-items: center
+    width: 100%
+    height: 10%
+    background-color: #95d5b5
+    // box-shadow: 3px 3px 40px -4px rgba(0,0,0,0.75)
+    span
+        margin-left: 5%
 
 .about
     position: relative
     color: #f5e8e8
     margin: 0 auto
+    margin-top: 10% 
     min-width: 50%
     max-width: 80%
     min-height: 60%
