--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -28,9 +28,8 @@
     text-decoration: none
     color: gray
 
-    margin: 10px
-    margin-left: 0px
-    padding: 10px
+    
+    padding: 15px
 
     transition: border-left 400ms
     display: flex
@@ -63,7 +62,12 @@
         color: #91dbdb
     &:hover
         border-left: 5px solid #91dbdb
-    
+.hdr-menu-5 
+    i 
+        color: #91e8e4
+    &:hover
+        border-left: 5px solid #91e8e4
+
 
 .header-menu:hover
     background-color: #fdf6d6
