--- a/src/sass/_about.sass
+++ b/src/sass/_about.sass
@@ -40,22 +40,22 @@
 
     display: flex
     flex-direction: column
-    // justify-content: center
+    
 
-.about-header
-    // font-weight: bold
-    font-size: 2rem
-    font-family: 'Roboto'
-    color: white
+    .about-header
+        // font-weight: bold
+        font-size: 2rem
+        font-family: 'Roboto'
+        color: white
 
-    display: flex
-    align-items: center
-    width: 100%
-    height: 10%
-    background-color: #95d5b5
-    // box-shadow: 3px 3px 40px -4px rgba(0,0,0,0.75)
-    span
-        margin-left: 5%
+        display: flex
+        align-items: center
+        width: 100%
+        height: 10%
+        background-color: #71b9cc
+        // box-shadow: 3px 3px 40px -4px rgba(0,0,0,0.75)
+        span
+            margin-left: 5%
 
 .about
     position: relative
