--- a/src/sass/_portfolio.sass
+++ b/src/sass/_portfolio.sass
@@ -1,14 +1,28 @@
 .portfolio-page
+    height: 100%
     width: 85%
     right: 0
     position: absolute
     z-index: 1
     display: flex
-    min-height: 100%
+    flex-direction: column
     
     background-image: url(./img/brickwall_@2X.png)
     background-repeat: repeat
 
+    .portfolio-header
+        font-size: 2rem
+        font-family: 'Roboto'
+        color: white
+
+        display: flex
+        align-items: center
+        width: 100%
+        height: 10%
+        background-color: #6fcaca
+        
+    span
+        margin-left: 5%
 
     .portfolio-wrp
         min-width: 200px
@@ -18,14 +32,6 @@
         display: flex
         justify-content: center
         flex-direction: column
-        
-        
-    .side-nav 
-        width: 100%
-        flex: 1
-        display: flex
-        flex-direction: column
-        justify-content: flex-start
 
 .portfolio-item-list
     
@@ -40,7 +46,6 @@
         height: 50%
         background-color: #a1919182
         flex-basis: 39%
-        // min-width: 39%
         img
             width: 150px
             flex: 1
