--- a/src/App.scss
+++ b/src/App.scss
@@ -3,10 +3,11 @@
 @import './sass/_about.sass';
 @import './sass/_portfolio.sass';
 @import './sass/_home.sass';
+@import './sass/_contacts.sass';
+@import './sass/_resume.sass';
 
 
 .App {
-  // background: linear-gradient(to bottom, #fac1c4, #fcc9c5, rgba(252, 210, 201, 0.43), rgba(252, 219, 206, 0.43), rgba(252, 227, 213, 0.14));
   text-align: center;
   height: 100%;
   overflow: hidden;
