--- a/src/sass/_about.sass
+++ b/src/sass/_about.sass
@@ -34,7 +34,7 @@
     right: 0
 
     background-color: white
-    background-image: url(./img/swirl_pattern.png)
+    background-image: url(./img/dust_scratches.png)
     background-repeat: repeat
     
 
