--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -19,6 +19,28 @@
     // background-image: linear-gradient(to top, #fac2c5, #ca9aaa, #98768e, #675570, #373650)
 
     transition: border-left 400ms
+.header-logo
+    height: 25%
+    display: flex
+    flex-direction: column
+    justify-content: space-around
+    &:after
+        height: 3px
+        background-color: yellow
+        width: 80%
+        content: ' '
+        margin: 0 auto
+    .logo
+        border-radius: 100%
+        margin-top: 10px 
+        margin: 0 auto
+        height: 180px
+        width: 180px
+        background-image: url(./img/logo.jpg)
+        background-position: center
+        background-repeat: no-repeat
+        background-size: cover
+        
 
 .header-menu
     width: 100%
