--- a/src/sass/_portfolio.sass
+++ b/src/sass/_portfolio.sass
@@ -7,7 +7,7 @@
     display: flex
     flex-direction: column
     
-    background-image: url(./img/brickwall_@2X.png)
+    background-image: url(./img/dust_scratches.png)
     background-repeat: repeat
 
     .portfolio-header
