--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -25,6 +25,7 @@
     min-height: 35%
     display: flex
     flex-direction: column
+    justify-content: space-evenly
     &:after
         
         height: 1px
@@ -52,7 +53,7 @@
             display: block
             padding: 1%
         &:last-child
-            color: #756f6f
+            color: hsla(0, 3%, 45%, 0.84)
             
             
 
@@ -67,7 +68,7 @@
     font-weight: 600
     font-family: 'Roboto'
     text-decoration: none
-    color: #756f6f
+    color: hsla(0, 3%, 45%, 0.84)
 
     
     padding: 15px
