--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -1,5 +1,3 @@
-@import './media/header-media.sass'
-    
 .header-wrp
     
     overflow: hidden
@@ -17,9 +15,9 @@
     
     background: white
     box-shadow: 9px 2px 19px -8px rgba(0,0,0,0.75)
-    // background-image: linear-gradient(to top, #fac2c5, #ca9aaa, #98768e, #675570, #373650)
 
     transition: border-left 400ms
+
 .header-logo
     
     min-height: 35%
@@ -130,3 +128,8 @@
     transform: translateY(0%)
     transition: transform 300ms ease
     will-change: transform
+
+
+
+//media
+@import './media/_header-media.sass'
