--- a/src/sass/media/_home-media.sass
+++ b/src/sass/media/_home-media.sass
@@ -29,5 +29,4 @@
 //  @media only screen and (min-width: 992px)
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px)
-    .home
+// @media only screen and (min-width: 1200px)
