header landscape mobile adapt

--- a/src/sass/media/_header-media.sass
+++ b/src/sass/media/_header-media.sass
@@ -59,6 +59,18 @@
         transition: all 380ms
         will-change: transform
 
+@media only screen and (min-width: 600px) and (max-width: 750px)
+    .logo
+        display: none
+    .header-wrp
+        width: 22%
+        box-shadow: 2px -1px 20px -8px rgba(0, 0, 0, 0.75)
+
+
+    .header-menu
+        padding: 3px
+        
+
 // .header-wrp:active .nav-mobile
 //     display: block
 
