--- a/src/sass/media/_about-media.sass
+++ b/src/sass/media/_about-media.sass
@@ -3,3 +3,9 @@
         width: 100%
         height: 91%
         bottom: 0
+
+
+@media only screen and (min-width: 600px) and (max-width: 750px)
+    .about-wrp
+        width: 78%
+        height: 100%
