--- a/src/sass/media/_contacts-media.sass
+++ b/src/sass/media/_contacts-media.sass
@@ -3,3 +3,8 @@
         width: 100%
         height: 91%
         bottom: 0
+
+@media only screen and (min-width: 600px) and (max-width: 750px)
+    .contacts-page
+        width: 78%
+        height: 100%
