--- a/src/sass/media/_resume-media.sass
+++ b/src/sass/media/_resume-media.sass
@@ -3,3 +3,7 @@
         width: 100%
         height: 91%
         bottom: 0
+@media only screen and (min-width: 600px) and (max-width: 750px)
+    .resume-page
+        width: 78%
+        height: 100%
