--- a/src/App.scss
+++ b/src/App.scss
@@ -38,7 +38,7 @@
   transform: translateX(-150%);
   
 }
-
+//900
 .fade-enter.fade-enter-active {
   transform: translateX(0);
   transition: transform 900ms ease-out;
@@ -50,9 +50,23 @@
 }
 .fade-exit.fade-exit-active{
   transform: translateX(150%) rotateY(30deg);
-  transition: transform 860ms ease-out;
+  // transition: transform 860ms ease-out;
+  animation: trdslide 960ms ease-out;
   will-change: transform;
   transform-style: preserve-3d;
 }
 
+@keyframes trdslide {
+  0%{
+    transform: translateX(0%) rotateY(0deg) scaleY(1);
+    // transform: rotateY(0);
+  }
+  10%{
+    transform: translateX(20%) rotateY(1.5deg) scaleY(1);
+  }
+  100%{
+    transform: translateX(150%) rotateY(25deg) scaleY(.6);
+    // transform: rotateY(30deg);
+  }
+}
 
