--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -27,11 +27,13 @@
     flex-direction: column
     justify-content: space-evenly
 .logo-text:after
+    display: block
     height: 1px
     background-color: rgba(117, 111, 111, 0.65)
     width: 80%
-    content: ' '
+    content: '  '
     margin: 0 auto
+    margin-top: 18px
     border-radius: 20%
 
 .logo-text
@@ -57,7 +59,7 @@
     background-size: cover            
 
 .name
-    color: #81abd7 
+    
     font-weight: bold
     font-size: 1.6rem          
 
