--- a/src/sass/media/_about-media.sass
+++ b/src/sass/media/_about-media.sass
@@ -3,9 +3,15 @@
         width: 100%
         height: 91%
         bottom: 0
-
+    .about-wrp .about-header span
+        margin-left: 17%
 
 @media only screen and (min-width: 600px) and (max-width: 750px)
+    .about-wrp
+        width: 78%
+        height: 100%
+
+@media only screen and (min-width: 730px) and (max-width: 850px)
     .about-wrp
         width: 78%
         height: 100%
