--- a/src/sass/media/_contacts-media.sass
+++ b/src/sass/media/_contacts-media.sass
@@ -3,8 +3,14 @@
         width: 100%
         height: 91%
         bottom: 0
+    .contacts-page .contacts-header span
+        margin-left: 17%
 
 @media only screen and (min-width: 600px) and (max-width: 750px)
+    .contacts-page
+        width: 78%
+        height: 100%
+@media only screen and (min-width: 730px) and (max-width: 850px)
     .contacts-page
         width: 78%
         height: 100%
