--- a/src/sass/media/_resume-media.sass
+++ b/src/sass/media/_resume-media.sass
@@ -3,7 +3,13 @@
         width: 100%
         height: 91%
         bottom: 0
+    .resume-page .resume-header span
+        margin-left: 17%
 @media only screen and (min-width: 600px) and (max-width: 750px)
+    .resume-page
+        width: 78%
+        height: 100%
+@media only screen and (min-width: 730px) and (max-width: 850px)
     .resume-page
         width: 78%
         height: 100%
