--- a/src/sass/media/_header-media.sass
+++ b/src/sass/media/_header-media.sass
@@ -62,6 +62,14 @@
 
     .logo-text:after
         display: none
+    
+    .menu-icon
+        color: rgba(118, 111, 111, 0.84)
+        transition: all 200ms
+        &:active
+            
+            transform: scale(1.3)
+            transition: all 200ms
 
 @media only screen and (min-width: 600px) and (max-width: 730px)
     .logo
