--- a/src/sass/media/_header-media.sass
+++ b/src/sass/media/_header-media.sass
@@ -70,7 +70,7 @@
             
             transform: scale(1.3)
             transition: all 200ms
-
+//phone landscape
 @media only screen and (min-width: 600px) and (max-width: 730px)
     .logo
         display: none
@@ -81,14 +81,26 @@
     .header-sub-wrp
         display: flex
         flex-direction: column
-        justify-content: space-evenly
+        justify-content: flex-start
+
+    .header-logo
+        justify-content: flex-start
+
+    .logo-text
+        .name
+            font-size: 1.3em
+        span 
+            font-size: .9em
+        &:after
+            margin-top: 10px
 
     .logo-text:after
         display: none
 
     .header-menu
+        font-size: 15px
         padding: 6px
-
+//tablets portret
 @media only screen and (min-width: 730px) and (max-width: 850px)
     .header-wrp
         width: 22%
@@ -99,13 +111,34 @@
     .logo
         display: none
 
-    
+    .logo-text
+        .name
+            font-size: 1.3em
+        span 
+            font-size: .9em
+        &:after
+            margin-top: 10px
 
     .header-menu
         font-size: 21px
         padding: 16px
         i
             width: 25%
+//tablet landscape
+@media only screen and (min-width: 850px) and (max-width: 1050px)
+    .header-wrp
+        box-shadow: -3px -1px 18px 1px rgba(0, 0, 0, 0.75)
+    .header-logo
+        justify-content: flex-start
+    .logo
+        display: none
+    .logo-text
+        .name
+            font-size: 1.2em
+        span 
+            font-size: .8em
+        &:after
+            margin-top: 5px
 
 // @media only screen and (min-width: 600px) and (max-width: 750px)
 //     .header-wrp
@@ -124,7 +157,7 @@
 
     
 // /* Medium devices (landscape tablets, 768px and up) */
-// @media only screen and (min-width: 768px)
+
 
 // /* Large devices (laptops/desktops, 992px and up) */
 //  @media only screen and (min-width: 992px)
