--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -62,8 +62,10 @@
     
     font-weight: bold
     font-size: 1.6rem          
-
+.nav-wrapper
+    overflow: hidden
 .header-menu
+    overflow: hidden
     width: 100%
     font-size: 20px
     font-weight: 600
@@ -72,17 +74,20 @@
     color: hsla(0, 3%, 45%, 0.84)
 
     
-    padding: 15px
+    padding: 15px 15px 15px 0px
 
     transition: border-left 400ms
     display: flex
-
+    &:active
+        user-select: none
+        outline: none
 
     i 
         width: 30%
     span 
         width: 70%
         text-align: left
+
 
 .hdr-menu-1 
     i 
