--- a/src/sass/_about.sass
+++ b/src/sass/_about.sass
@@ -1,38 +1,12 @@
-
-@keyframes scale-machine
-    0%
-        height: 60%
-        width: 40%
-        
-    50%
-        width: 100%
-        height: 60%
-        
-    100%
-        width: 100%
-        height: 100%
-
-@keyframes another-scale-machine
-    0%
-        width: 100%
-        height: 100%
-
-    50%
-        width: 100%
-        height: 60%
-        
-    100%
-        height: 60%
-        width: 40%
-        
-        
-
+     
 .about-wrp
     will-change: transform
     position: absolute
     height: 100%
     width: 85%
     right: 0
+    overflow-y: scroll
+    overflow-x: hidden
 
     background-color: white
     background-image: url(./img/dust_scratches.png)
@@ -59,44 +33,81 @@
             margin-left: 5%
 
 .about
-    position: relative
-    color: #f5e8e8
-    margin: 0 auto
-    margin-top: 10% 
-    min-width: 50%
-    max-width: 80%
+    color: rgba(118, 111, 111, 0.84)
+    margin: 0 auto 
+    min-width: 80%
     min-height: 60%
-    height: 60%
-    background-color: hsla(0, 11%, 53%, 0.69)
-
-    display: flex
-    flex-direction: column
-    justify-content: center
-    align-items: center
-
+    height: 100%
     .tech-item
-        margin: 2px
+        margin: 6% 0 1% 0 
         min-height: 30%
-        background-color: grey
-        width: 40%
-        animation: another-scale-machine 300ms
-        will-change: width, height
-    
-    .tech-item-active
-        top: -2px
-        left: -2px
-        background-color: orange
+        background-color: white
         width: 100%
-        height: 100%
-        position: absolute
-        animation: scale-machine 300ms
+        
         will-change: width, height
-        z-index: 3
+        box-shadow: 5px 5px 9px 0px rgba(0, 0, 0, 0.24)
+        h3 
+            font-size: 2em
+            font-weight: normal
+            text-align: left
+            padding-left: 5%
+            padding-top: 2%
+            
+            &:after
+                display: block
+                content: ' '
+                height: 1px
+                background-color: rgba(118, 111, 111, 0.84)
+                width: 70%
+                margin: 0 auto
+                margin-top: 2%
+        &:last-child
+            margin-bottom: 6%
+    
+    
+
+    // display: flex
+    // flex-direction: column
+    // justify-content: center
+    // align-items: center
+
+    
+    // .tech-item-active
+    //     top: -2px
+    //     left: -2px
+    //     background-color: orange
+    //     width: 100%
+    //     height: 100%
+    //     position: absolute
+    //     animation: scale-machine 300ms
+    //     will-change: width, height
+    //     z-index: 3
         
 
-.tech-item-caption
-    transform: scale(1.3)
+
             
+
+//scrollbar
+::-webkit-scrollbar
+    width: 12px
+
+::-webkit-scrollbar-thumb
+    border-width: 1px 1px 1px 2px
+    border-color: #777
+    background-color: rgba(118, 111, 111, 0.84)
+
+::-webkit-scrollbar-thumb:hover
+    border-width: 1px 1px 1px 2px
+    border-color: #555
+    background-color: #777
+
+::-webkit-scrollbar-track
+    border-width: 0
+    
+::-webkit-scrollbar-track:hover
+    border-left: solid 1px #aaa
+    background-color: #eee
+
 
 //media
 @import './media/_about-media.sass'
