about component working

--- a/src/sass/_about.sass
+++ b/src/sass/_about.sass
@@ -64,7 +64,11 @@
         &:last-child
             margin-bottom: 6%
 
-        
+.skill-icon
+    img
+        width: 100px
+    
+    
 
 
             
