--- a/src/sass/_about.sass
+++ b/src/sass/_about.sass
@@ -18,7 +18,6 @@
     
 
     .about-header
-        // font-weight: bold
         font-size: 2rem
         font-family: 'Roboto'
         color: white
@@ -28,7 +27,6 @@
         width: 100%
         height: 10%
         background-color: #71b9cc
-        // box-shadow: 3px 3px 40px -4px rgba(0,0,0,0.75)
         span
             margin-left: 10%
 
@@ -40,18 +38,20 @@
     height: 100%
     .tech-item
         margin: 6% 0 1% 0 
-        min-height: 30%
+        height: 30%
         background-color: white
         width: 100%
         
         will-change: width, height
         box-shadow: 5px 5px 9px 0px rgba(0, 0, 0, 0.24)
         h3 
+            height: 25%
+            margin: 0
             font-size: 2em
             font-weight: normal
             text-align: left
             padding-left: 5%
-            padding-top: 2%
+            padding-top: .8%
             
             &:after
                 display: block
@@ -63,11 +63,27 @@
                 margin-top: 2%
         &:last-child
             margin-bottom: 6%
+.tech-item-caption
+    height: 75%
 
 .skill-icon
+    display: flex
+    justify-content: space-evenly
+    height: 100%
     img
-        width: 100px
-    
+        height: 100px
+        margin: 0 auto
+        
+.skill
+    flex: 1
+    display: flex
+    flex-direction: column
+    justify-content: center
+    span 
+        padding-top: 5%
+
+.skill *
+    display: block
     
 
 
