--- a/src/sass/_about.sass
+++ b/src/sass/_about.sass
@@ -73,6 +73,16 @@
     img
         height: 100px
         margin: 0 auto
+        transition: all 200ms
+        transition-delay: 50ms
+        will-change: transform
+        
+        &:hover
+            
+            transform: scale(.8)
+            will-change: transform
+            transition: all 200ms
+            transition-delay: 50ms
         
 .skill
     flex: 1
