about page adaptive for phones

--- a/src/sass/media/_about-media.sass
+++ b/src/sass/media/_about-media.sass
@@ -3,8 +3,20 @@
         width: 100%
         height: 91%
         bottom: 0
+
+    .about
+        .tech-item
+            height: auto
+            h3 
+                &:after
+                    display: none
+                    content: ''
+
     .about-wrp .about-header span
         margin-left: 17%
+
+    .skill-icon
+        flex-direction: column
 
 @media only screen and (min-width: 600px) and (max-width: 750px)
     .about-wrp
