about page portrait phone layout done

--- a/src/sass/media/_about-media.sass
+++ b/src/sass/media/_about-media.sass
@@ -8,6 +8,7 @@
         .tech-item
             height: auto
             h3 
+                padding-bottom: .8%
                 &:after
                     display: none
                     content: ''
@@ -17,6 +18,10 @@
 
     .skill-icon
         flex-direction: column
+
+    .skill
+        font-size: 20px
+        padding-bottom: 15px
 
 @media only screen and (min-width: 600px) and (max-width: 750px)
     .about-wrp
