about page. phone landscape layout

--- a/src/sass/media/_about-media.sass
+++ b/src/sass/media/_about-media.sass
@@ -23,10 +23,22 @@
         font-size: 20px
         padding-bottom: 15px
 
+//landscape
 @media only screen and (min-width: 600px) and (max-width: 750px)
     .about-wrp
         width: 78%
         height: 100%
+    
+    .about
+        width: 90%
+
+    .about-header
+        font-size: 1.6rem
+    .skill
+        img 
+            height: 40px
+        span 
+            font-size: 12px
 
 @media only screen and (min-width: 730px) and (max-width: 850px)
     .about-wrp
