tablets portrait orientation

--- a/src/sass/media/_about-media.sass
+++ b/src/sass/media/_about-media.sass
@@ -23,7 +23,7 @@
         font-size: 20px
         padding-bottom: 15px
 
-//landscape
+//landscape phone
 @media only screen and (min-width: 600px) and (max-width: 750px)
     .about-wrp
         width: 78%
@@ -39,8 +39,25 @@
             height: 40px
         span 
             font-size: 12px
-
+//tablet portrait
 @media only screen and (min-width: 730px) and (max-width: 850px)
     .about-wrp
         width: 78%
         height: 100%
+    
+    .about
+        width: 90%
+        .tech-item
+            height: 25%
+
+    .skill
+        img 
+            height: 63px
+        span 
+            font-size: 14px
+    
+    .skill-icon
+        padding: 0 5px 0 5px
+
+//tablet landscape
+// @media only screen and (min-width: 850px) and (max-width: 1050px)        
