fixing bugs, adding new bugs

--- a/src/sass/media/_about-media.sass
+++ b/src/sass/media/_about-media.sass
@@ -23,6 +23,9 @@
         font-size: 20px
         padding-bottom: 15px
 
+.about .tech-item:last-child
+    margin-bottom: 6%
+
 //landscape phone
 @media only screen and (min-width: 600px) and (max-width: 750px)
     .about-wrp
@@ -60,4 +63,9 @@
         padding: 0 5px 0 5px
 
 //tablet landscape
-// @media only screen and (min-width: 850px) and (max-width: 1050px)        
+@media only screen and (min-width: 850px) and (max-width: 1050px)        
+    .skill-icon
+        padding: 0 5px 0 5px
+
+    .about
+        width: 90%
