--- a/src/sass/media/_home-media.sass
+++ b/src/sass/media/_home-media.sass
@@ -9,6 +9,9 @@
         rgba(110, 122, 181, 0.76))
 
         color: rgba(74, 71, 71, 0.9)
+    .home-wrapper
+        justify-content: center
+        
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) and (max-width: 750px)
