--- a/src/sass/media/_header-media.sass
+++ b/src/sass/media/_header-media.sass
@@ -39,7 +39,7 @@
                     top: 0
                     z-index: 5
                     padding-top: 15%
-                    width: 50%
+                    width: 30%
                     height: 100vh
                     background-color: white
                 .nav-overlay
@@ -50,10 +50,16 @@
                     background-color: hsla(0, 0%, 6%, 0.62)
                     height: 100vh
                     z-index: 4
+                    will-change: transform
     .nav-mobile
         transform: translateX(-250%)
         transition: all 380ms
         will-change: transform
+        position: absolute
+        top: 0
+        left: 0
+        height: 100vh
+        width: 100vh
 
     .nav-mobile-active
         transform: translateX(0)
@@ -70,6 +76,10 @@
             
             transform: scale(1.3)
             transition: all 200ms
+    
+    
+    .spec
+        font-size: 14px
 //phone landscape
 @media only screen and (min-width: 600px) and (max-width: 730px)
     .logo
