home page working with adaptive

--- a/src/sass/media/_home-media.sass
+++ b/src/sass/media/_home-media.sass
@@ -10,7 +10,7 @@
 
         color: rgba(74, 71, 71, 0.9)
     .home-wrapper
-        justify-content: center
+        justify-content: space-evenly
         
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
