--- a/src/sass/media/_portfolio-media.sass
+++ b/src/sass/media/_portfolio-media.sass
@@ -5,11 +5,18 @@
         bottom: 0
     .portfolio-page span
         margin-left: 17%
+    .portfolio-item-list
+        justify-content: none
 @media only screen and (min-width: 600px) and (max-width: 750px)
     .portfolio-page
         width: 78%
         height: 100%
+    .portfolio-item-list
+        justify-content: center
 @media only screen and (min-width: 730px) and (max-width: 850px)
     .portfolio-page
         width: 78%
         height: 100%
+
+    .portfolio-item-list
+        justify-content: center
