--- a/src/sass/media/_about-media.sass
+++ b/src/sass/media/_about-media.sass
@@ -12,6 +12,8 @@
                 &:after
                     display: none
                     content: ''
+            &:last-child
+                margin-bottom: 6%
 
     .about-wrp .about-header span
         margin-left: 17%
@@ -23,7 +25,7 @@
         font-size: 20px
         padding-bottom: 15px
 
-.about .tech-item:last-child
+.tech-item:last-child
     margin-bottom: 6%
 
 //landscape phone
@@ -52,6 +54,8 @@
         width: 90%
         .tech-item
             height: 25%
+            &:last-child
+                margin-bottom: 6%
 
     .skill
         img 
