--- a/src/sass/_portfolio.sass
+++ b/src/sass/_portfolio.sass
@@ -1,3 +1,4 @@
+
 .portfolio-page
     height: 100%
     width: 85%
@@ -49,11 +50,11 @@
         width: 100%
         height: 35%
         position: relative
+        margin: 5% 0 5% 0
         &:before
             box-shadow: 9px 9px 20px -9px rgba(0,0,0,0.56)
             position: absolute
-            top: 0
-            left: 10%
+            
             display: block
             background-color: hsla(0, 0%, 82%, 0.68)
             content: ' '
@@ -62,8 +63,7 @@
             z-index: -1
         .img-wrp
             box-shadow: 24px 16px 54px -9px rgba(0,0,0,0.67)
-            top: 5%
-            right: 0
+            
             position: absolute
             width: 50%
             height: 90%
@@ -79,10 +79,27 @@
             z-index: 1
             width: 45%
             height: 80%
-            top: 10% 
-            left: 9%
             position: absolute
             background-color: white
-
+    .first
+        &:before
+            top: 0
+            left: 10%
+        div
+            top: 5%
+            right: 0
+        figcaption
+            top: 10% 
+            left: 9%
+    .second
+        &:before
+            top: 0
+            right: 10%
+        div
+            top: 5%
+            left: 0
+        figcaption
+            top: 10% 
+            right: 9%
 //media
 @import './media/_portfolio-media.sass'
