--- a/src/sass/_portfolio.sass
+++ b/src/sass/_portfolio.sass
@@ -63,17 +63,21 @@
             z-index: -1
         .img-wrp
             box-shadow: 24px 16px 54px -9px rgba(0,0,0,0.67)
-            
+            will-change: transform
             position: absolute
             width: 50%
             height: 90%
             overflow: hidden
+            perspective: 10px
+            transition: all 300ms
+            transition-delay: 50ms
             img
                 vertical-align: middle
                 width: 100%
                 flex: 1
                 z-index: 3
                 // width: 52%
+            
         figcaption
             box-shadow: 20px 18px 63px -9px rgba(0,0,0,0.67)
             z-index: 1
@@ -88,6 +92,11 @@
         div
             top: 5%
             right: 0
+            &:hover
+                will-change: transform
+                transition-delay: 50ms
+                transform: rotateY(-5deg)
+                transition: all 300ms
         figcaption
             top: 10% 
             left: 9%
@@ -98,6 +107,11 @@
         div
             top: 5%
             left: 0
+            &:hover
+                will-change: transform
+                transition-delay: 50ms
+                transform: rotateY(5deg)
+                transition: all 300ms
         figcaption
             top: 10% 
             right: 9%
