--- a/src/sass/media/_portfolio-media.sass
+++ b/src/sass/media/_portfolio-media.sass
@@ -7,6 +7,23 @@
         margin-left: 17%
     .portfolio-item-list
         justify-content: none
+        .portfolio-item
+            box-shadow: 20px 18px 63px -9px rgba(0, 0, 0, 0.27)
+            height: 60%
+            margin: 5% 0 15% 0
+            &:before
+                content: none
+            .img-wrp
+                box-shadow: none
+                position: unset
+                width: 100%
+                height: 40%
+            figcaption
+                box-shadow: none
+                width: 100%
+                height: 60%
+                position: unset
+
 @media only screen and (min-width: 600px) and (max-width: 750px)
     .portfolio-page
         width: 78%
@@ -20,3 +37,20 @@
 
     .portfolio-item-list
         justify-content: center
+        .portfolio-item
+            box-shadow: 20px 18px 63px -9px rgba(0, 0, 0, 0.37)
+            width: 100%
+            height: 60%
+            margin-bottom: 10%
+            &:before
+                content: none
+            .img-wrp
+                box-shadow: none
+                position: unset
+                width: 100%
+                height: 40%
+            figcaption
+                box-shadow: none
+                position: unset
+                width: 100%
+                height: 60%
