--- a/src/sass/_portfolio.sass
+++ b/src/sass/_portfolio.sass
@@ -85,6 +85,20 @@
             height: 80%
             position: absolute
             background-color: white
+            display: flex
+            flex-direction: column
+            justify-content: space-evenly
+            h3 
+                margin: 0
+                font-size: 1.8em
+                color: rgba(118, 111, 111, 0.94)
+            .caption-text
+                color: rgba(118, 111, 111, 0.84)
+            a 
+                text-decoration: none
+                color: #6fcaca
+                font-size: 1.3em
+                font-weight: 600
     .first
         &:before
             top: 0
@@ -115,5 +129,6 @@
         figcaption
             top: 10% 
             right: 9%
+            
 //media
 @import './media/_portfolio-media.sass'
