--- a/src/sass/media/_portfolio-media.sass
+++ b/src/sass/media/_portfolio-media.sass
@@ -24,12 +24,33 @@
                 height: 60%
                 position: unset
 
-@media only screen and (min-width: 600px) and (max-width: 750px)
+@media only screen and (min-width: 600px) and (max-width: 730px)
     .portfolio-page
         width: 78%
         height: 100%
     .portfolio-item-list
         justify-content: center
+        .portfolio-item
+            box-shadow: 20px 18px 63px -9px rgba(0, 0, 0, 0.27)
+            height: 60%
+            margin: 5% 0 15% 0
+            &:before
+                content: none
+            .img-wrp
+                box-shadow: none
+                position: unset
+                width: 100%
+                height: 30%
+            figcaption
+                box-shadow: none
+                width: 100%
+                height: 70%
+                position: unset
+                h3 
+                    font-size: 1.5em
+                a
+                    font-size: 1.2em
+
 @media only screen and (min-width: 730px) and (max-width: 850px)
     .portfolio-page
         width: 78%
