contacts icons done

--- a/src/sass/_contacts.sass
+++ b/src/sass/_contacts.sass
@@ -18,6 +18,19 @@
             margin-left: 5%
     .contacts
         height: 100%
-
+        .contact-list
+            width: 80%
+            margin: 0 auto
+            margin-top: 3%
+            .contact-item
+                display: flex
+                align-items: center
+                margin: 1%
+                img 
+                    width: 7%
+                .contact-text
+                    margin-left: 2%
+                    color: rgba(118, 111, 111, 0.95)
+                    font-size: 1.4em
 //media
 @import './media/_contacts-media.sass'
