--- a/src/sass/_portfolio.sass
+++ b/src/sass/_portfolio.sass
@@ -94,6 +94,9 @@
                 color: #6fcaca
                 font-size: 1.3em
                 font-weight: 600
+                width: 40%
+                margin: 0 auto
+                    
     .first
         &:before
             top: 0
