--- a/src/sass/media/_contacts-media.sass
+++ b/src/sass/media/_contacts-media.sass
@@ -3,8 +3,15 @@
         width: 100%
         height: 91%
         bottom: 0
+        .contacts
+            .contact-list 
+                .contact-item
+                    img
+                        width: 15%
     .contacts-page .contacts-header span
         margin-left: 17%
+    
+    
 
 @media only screen and (min-width: 600px) and (max-width: 750px)
     .contacts-page
