portfolio page tablets

--- a/src/sass/_contacts.sass
+++ b/src/sass/_contacts.sass
@@ -28,6 +28,11 @@
                 margin: 1%
                 img 
                     width: 7%
+                    transition: all 200ms ease
+                    &:hover
+                        
+                        transform: scale(1.1) rotateZ(13deg)
+                        transition: all 200ms ease
                 .contact-text
                     margin-left: 2%
                     color: rgba(118, 111, 111, 0.95)
