--- a/src/sass/media/_contacts-media.sass
+++ b/src/sass/media/_contacts-media.sass
@@ -21,3 +21,13 @@
     .contacts-page
         width: 78%
         height: 100%
+        .contacts
+            .contact-list
+                .contact-item img
+                    width: 23%
+@media only screen and (min-width: 850px) and (max-width: 1050px)
+    .contacts-page
+        .contacts
+            .contact-list
+                .contact-item img
+                    width: 13%
