--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -25,7 +25,7 @@
     min-height: 35%
     display: flex
     flex-direction: column
-    justify-content: space-evenly
+    justify-content: flex-start
 
 .logo-text:after
     display: block
@@ -49,6 +49,9 @@
         color: hsla(0, 3%, 45%, 0.84)
             
 .logo
+
+    display: none
+
     border-radius: 100%
     margin-top: 10px 
     margin: 0 auto
