--- a/src/sass/media/_portfolio-media.sass
+++ b/src/sass/media/_portfolio-media.sass
@@ -23,6 +23,10 @@
                 width: 100%
                 height: 60%
                 position: unset
+        .first, .second
+            div
+                &:hover
+                    transform: none
 
 @media only screen and (min-width: 600px) and (max-width: 730px)
     .portfolio-page
@@ -32,7 +36,7 @@
         justify-content: center
         .portfolio-item
             box-shadow: 20px 18px 63px -9px rgba(0, 0, 0, 0.27)
-            height: 60%
+            height: 78%
             margin: 5% 0 15% 0
             &:before
                 content: none
@@ -40,17 +44,21 @@
                 box-shadow: none
                 position: unset
                 width: 100%
-                height: 30%
+                height: 43%
             figcaption
                 box-shadow: none
                 width: 100%
-                height: 70%
+                height: 57%
                 position: unset
                 h3 
                     font-size: 1.5em
                 a
                     font-size: 1.2em
-
+        .first, .second
+            div
+                &:hover
+                    transform: none
+// tablets portrait
 @media only screen and (min-width: 730px) and (max-width: 850px)
     .portfolio-page
         width: 78%
@@ -70,8 +78,16 @@
                 position: unset
                 width: 100%
                 height: 40%
+                img 
+                    &:hover
+                        transform: none
             figcaption
                 box-shadow: none
                 position: unset
                 width: 100%
                 height: 60%
+
+        .first, .second
+            div
+                &:hover
+                    transform: none
